syntax = "proto3";

package task;

// Definição da mensagem Task
message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  string priority = 5;
  string user_id = 6;
  int64 created_at = 7;
}

// Mensagens de requisição
message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string priority = 3;
  string user_id = 4;
}

message GetTaskRequest {
  string id = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  string priority = 5;
}

message DeleteTaskRequest {
  string id = 1;
}

message ListTasksRequest {
  string user_id = 1;
  bool completed = 2;
  string priority = 3;
}

// Mensagens de resposta
message TaskResponse {
  bool success = 1;
  string message = 2;
  Task task = 3;
}

message TaskListResponse {
  bool success = 1;
  string message = 2;
  repeated Task tasks = 3;
  int32 total = 4;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

// Definição do serviço gRPC
service TaskService {
  // Operações CRUD
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
  rpc GetTask(GetTaskRequest) returns (TaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteResponse);
  rpc ListTasks(ListTasksRequest) returns (TaskListResponse);
  
  // Streaming de notificações
  rpc StreamTaskUpdates(ListTasksRequest) returns (stream TaskResponse);
}