const grpc = require('@grpc/grpc-js');
const { loadPackageDefinition } = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');

// Importar m√≥dulos necess√°rios
const { AuthService } = require('../services/AuthService');
const { TaskService } = require('../services/TaskService');
const { GrpcLoadBalancerGateway } = require('./loadBalancerGateway');
const { LoadBalancingStrategies } = require('./loadBalancer');

/**
 * Configura√ß√£o de m√∫ltiplos servidores backend para Load Balancing
 * 
 * Este arquivo cria m√∫ltiplas inst√¢ncias do servidor gRPC
 * para demonstrar o load balancing em a√ß√£o
 */

class BackendServerInstance {
    constructor(port, serverId, options = {}) {
        this.port = port;
        this.serverId = serverId;
        this.server = new grpc.Server();
        this.started = false;
        
        // Configura√ß√µes do servidor
        this.config = {
            simulateLatency: options.simulateLatency || false,
            minLatency: options.minLatency || 100,
            maxLatency: options.maxLatency || 500,
            errorRate: options.errorRate || 0, // 0-1 (0% a 100%)
            weight: options.weight || 1,
            ...options
        };
        
        console.log(`üèóÔ∏è  Criando servidor backend ${serverId} na porta ${port}`);
        this.setupServices();
    }

    /**
     * Configurar servi√ßos gRPC
     */
    setupServices() {
        // Carregar defini√ß√µes proto
        const authProtoPath = path.join(__dirname, '..', 'protos', 'auth_service.proto');
        const taskProtoPath = path.join(__dirname, '..', 'protos', 'task_service.proto');
        
        const authPackageDefinition = protoLoader.loadSync(authProtoPath, {
            keepCase: true,
            longs: String,
            enums: String,
            defaults: true,
            oneofs: true,
        });
        
        const taskPackageDefinition = protoLoader.loadSync(taskProtoPath, {
            keepCase: true,
            longs: String,
            enums: String,
            defaults: true,
            oneofs: true,
        });
        
        const authProto = loadPackageDefinition(authPackageDefinition);
        const taskProto = loadPackageDefinition(taskPackageDefinition);
        
        // Criar inst√¢ncias dos servi√ßos com identifica√ß√£o do servidor
        const authService = new AuthService();
        const taskService = new TaskService();
        
        // Wrapper para adicionar informa√ß√µes do servidor nas respostas
        const wrapServiceMethods = (serviceInstance, serviceName) => {
            const wrappedService = {};
            
            // Para AuthService, precisamos mapear m√©todos espec√≠ficos
            if (serviceName === 'AuthService') {
                wrappedService.authenticate = async (call, callback) => {
                    const startTime = Date.now();
                    
                    try {
                        // Simular lat√™ncia se configurado
                        if (this.config.simulateLatency) {
                            const latency = Math.random() * (this.config.maxLatency - this.config.minLatency) + this.config.minLatency;
                            await new Promise(resolve => setTimeout(resolve, latency));
                        }
                        
                        // Simular erro se configurado
                        if (this.config.errorRate > 0 && Math.random() < this.config.errorRate) {
                            const error = new Error(`Simulated error from ${this.serverId}`);
                            error.code = grpc.status.INTERNAL;
                            throw error;
                        }
                        
                        console.log(`üîß ${this.serverId}: Processando authenticate (${serviceName})`);
                        
                        // Executar m√©todo original
                        await serviceInstance.authenticate(call, (error, response) => {
                            if (error) {
                                console.log(`‚ùå ${this.serverId}: Erro em authenticate: ${error.message}`);
                                callback(error);
                            } else {
                                // Adicionar informa√ß√µes do servidor na resposta
                                if (response && typeof response === 'object') {
                                    response.serverId = this.serverId;
                                    response.serverPort = this.port;
                                }
                                
                                const processingTime = Date.now() - startTime;
                                console.log(`‚úÖ ${this.serverId}: authenticate conclu√≠do em ${processingTime}ms`);
                                
                                callback(null, response);
                            }
                        });
                        
                    } catch (error) {
                        const processingTime = Date.now() - startTime;
                        console.log(`‚ùå ${this.serverId}: Erro em authenticate ap√≥s ${processingTime}ms: ${error.message}`);
                        callback(error);
                    }
                };
                
                wrappedService.validateToken = async (call, callback) => {
                    try {
                        console.log(`üîß ${this.serverId}: Processando validateToken`);
                        await serviceInstance.validateToken(call, callback);
                    } catch (error) {
                        console.log(`‚ùå ${this.serverId}: Erro em validateToken: ${error.message}`);
                        callback(error);
                    }
                };
            }
            
            // Para TaskService
            if (serviceName === 'TaskService') {
                const methods = ['createTask', 'getTasks', 'updateTask', 'deleteTask'];
                
                methods.forEach(methodName => {
                    wrappedService[methodName] = async (call, callback) => {
                        const startTime = Date.now();
                        
                        try {
                            // Simular lat√™ncia se configurado
                            if (this.config.simulateLatency) {
                                const latency = Math.random() * (this.config.maxLatency - this.config.minLatency) + this.config.minLatency;
                                await new Promise(resolve => setTimeout(resolve, latency));
                            }
                            
                            // Simular erro se configurado
                            if (this.config.errorRate > 0 && Math.random() < this.config.errorRate) {
                                const error = new Error(`Simulated error from ${this.serverId}`);
                                error.code = grpc.status.INTERNAL;
                                throw error;
                            }
                            
                            console.log(`üîß ${this.serverId}: Processando ${methodName} (${serviceName})`);
                            
                            // Executar m√©todo original
                            await serviceInstance[methodName](call, (error, response) => {
                                if (error) {
                                    console.log(`‚ùå ${this.serverId}: Erro em ${methodName}: ${error.message}`);
                                    callback(error);
                                } else {
                                    // Adicionar informa√ß√µes do servidor na resposta
                                    if (response && typeof response === 'object') {
                                        response.serverId = this.serverId;
                                        response.serverPort = this.port;
                                    }
                                    
                                    const processingTime = Date.now() - startTime;
                                    console.log(`‚úÖ ${this.serverId}: ${methodName} conclu√≠do em ${processingTime}ms`);
                                    
                                    callback(null, response);
                                }
                            });
                            
                        } catch (error) {
                            const processingTime = Date.now() - startTime;
                            console.log(`‚ùå ${this.serverId}: Erro em ${methodName} ap√≥s ${processingTime}ms: ${error.message}`);
                            callback(error);
                        }
                    };
                });
            }
            
            return wrappedService;
        };
        
        // Adicionar servi√ßos com wrappers
        const wrappedAuthService = wrapServiceMethods(authService, 'AuthService');
        const wrappedTaskService = wrapServiceMethods(taskService, 'TaskService');
        
        this.server.addService(authProto.AuthService.service, wrappedAuthService);
        this.server.addService(taskProto.TaskService.service, wrappedTaskService);
        
        console.log(`üîå Servi√ßos configurados para ${this.serverId}`);
    }

    /**
     * Iniciar servidor backend
     */
    async start() {
        if (this.started) {
            throw new Error(`Servidor ${this.serverId} j√° est√° rodando`);
        }
        
        return new Promise((resolve, reject) => {
            this.server.bindAsync(
                `0.0.0.0:${this.port}`,
                grpc.ServerCredentials.createInsecure(),
                (error, port) => {
                    if (error) {
                        console.error(`‚ùå Erro ao iniciar ${this.serverId}: ${error.message}`);
                        reject(error);
                    } else {
                        this.server.start();
                        this.started = true;
                        console.log(`üöÄ ${this.serverId} rodando na porta ${port}`);
                        resolve(port);
                    }
                }
            );
        });
    }

    /**
     * Parar servidor backend
     */
    async stop() {
        if (!this.started) {
            return;
        }
        
        return new Promise((resolve) => {
            console.log(`üõë Parando ${this.serverId}...`);
            
            this.server.tryShutdown((error) => {
                if (error) {
                    console.log(`‚ö†Ô∏è Shutdown for√ßado para ${this.serverId}: ${error.message}`);
                    this.server.forceShutdown();
                }
                
                this.started = false;
                console.log(`‚úÖ ${this.serverId} parado`);
                resolve();
            });
        });
    }

    /**
     * Obter informa√ß√µes do servidor
     */
    getInfo() {
        return {
            serverId: this.serverId,
            port: this.port,
            started: this.started,
            config: this.config
        };
    }
}

/**
 * Gerenciador de m√∫ltiplos servidores backend
 */
class BackendCluster {
    constructor() {
        this.servers = new Map();
        this.gateway = null;
        
        console.log('üè≠ Cluster de servidores backend criado');
    }

    /**
     * Adicionar servidor backend ao cluster
     */
    addServer(port, serverId, options = {}) {
        if (this.servers.has(serverId)) {
            throw new Error(`Servidor ${serverId} j√° existe no cluster`);
        }
        
        const server = new BackendServerInstance(port, serverId, options);
        this.servers.set(serverId, server);
        
        console.log(`‚ûï Servidor ${serverId} adicionado ao cluster`);
        return server;
    }

    /**
     * Remover servidor do cluster
     */
    async removeServer(serverId) {
        const server = this.servers.get(serverId);
        if (server) {
            await server.stop();
            this.servers.delete(serverId);
            
            // Remover do gateway se existir
            if (this.gateway) {
                this.gateway.removeBackendServer(serverId);
            }
            
            console.log(`‚ûñ Servidor ${serverId} removido do cluster`);
        }
    }

    /**
     * Iniciar todos os servidores do cluster
     */
    async startAll() {
        console.log('üöÄ Iniciando cluster de servidores...');
        
        const startPromises = Array.from(this.servers.values()).map(server => 
            server.start().catch(error => {
                console.error(`‚ùå Falha ao iniciar ${server.serverId}: ${error.message}`);
                return null;
            })
        );
        
        const results = await Promise.allSettled(startPromises);
        const successCount = results.filter(result => result.status === 'fulfilled' && result.value !== null).length;
        
        console.log(`üéØ ${successCount}/${this.servers.size} servidores iniciados com sucesso`);
        return successCount;
    }

    /**
     * Parar todos os servidores do cluster
     */
    async stopAll() {
        console.log('üõë Parando cluster de servidores...');
        
        const stopPromises = Array.from(this.servers.values()).map(server => server.stop());
        await Promise.allSettled(stopPromises);
        
        console.log('‚úÖ Todos os servidores do cluster foram parados');
    }

    /**
     * Configurar gateway com load balancer
     */
    setupGateway(gatewayPort = 50050, strategy = LoadBalancingStrategies.ROUND_ROBIN) {
        this.gateway = new GrpcLoadBalancerGateway({
            port: gatewayPort,
            strategy: strategy,
            healthCheckInterval: 10000, // 10s para demo
            healthCheckTimeout: 3000,   // 3s para demo
            enableHealthChecks: true
        });
        
        // Adicionar todos os servidores do cluster ao load balancer
        this.servers.forEach((server, serverId) => {
            if (server.started) {
                this.gateway.addBackendServer('localhost', server.port, {
                    weight: server.config.weight,
                    metadata: { serverId }
                });
            }
        });
        
        console.log(`üö™ Gateway configurado na porta ${gatewayPort} com estrat√©gia ${strategy}`);
        return this.gateway;
    }

    /**
     * Iniciar gateway
     */
    async startGateway() {
        if (!this.gateway) {
            throw new Error('Gateway n√£o configurado. Use setupGateway() primeiro.');
        }
        
        // Carregar e adicionar servi√ßos ao gateway
        const authProtoPath = path.join(__dirname, '..', 'protos', 'auth_service.proto');
        const taskProtoPath = path.join(__dirname, '..', 'protos', 'task_service.proto');
        
        const authPackageDefinition = protoLoader.loadSync(authProtoPath, {
            keepCase: true,
            longs: String,
            enums: String,
            defaults: true,
            oneofs: true,
        });
        
        const taskPackageDefinition = protoLoader.loadSync(taskProtoPath, {
            keepCase: true,
            longs: String,
            enums: String,
            defaults: true,
            oneofs: true,
        });
        
        const authProto = loadPackageDefinition(authPackageDefinition);
        const taskProto = loadPackageDefinition(taskPackageDefinition);
        
        // Adicionar servi√ßos ao gateway (os m√©todos ser√£o proxied para os backends)
        this.gateway.addService(authProto.AuthService, {});
        this.gateway.addService(taskProto.TaskService, {});
        
        return await this.gateway.start();
    }

    /**
     * Parar gateway
     */
    async stopGateway() {
        if (this.gateway) {
            await this.gateway.stop();
            this.gateway = null;
        }
    }

    /**
     * Obter status do cluster
     */
    getClusterStatus() {
        const servers = Array.from(this.servers.values()).map(server => server.getInfo());
        const runningServers = servers.filter(s => s.started);
        
        return {
            totalServers: this.servers.size,
            runningServers: runningServers.length,
            gatewayRunning: this.gateway ? true : false,
            servers: servers
        };
    }

    /**
     * Relat√≥rio detalhado do cluster
     */
    getDetailedReport() {
        const status = this.getClusterStatus();
        
        console.log('\nüè≠ ===== RELAT√ìRIO DO CLUSTER BACKEND =====');
        console.log(`üñ•Ô∏è  Total de servidores: ${status.totalServers}`);
        console.log(`üöÄ Servidores rodando: ${status.runningServers}`);
        console.log(`üö™ Gateway: ${status.gatewayRunning ? 'Rodando' : 'Parado'}`);
        
        console.log('\nüìã Servidores:');
        status.servers.forEach(server => {
            const statusIcon = server.started ? '‚úÖ' : '‚ùå';
            console.log(`   ${statusIcon} ${server.serverId} - porta ${server.port} - peso ${server.config.weight}`);
            if (server.config.simulateLatency) {
                console.log(`      üì∂ Lat√™ncia: ${server.config.minLatency}-${server.config.maxLatency}ms`);
            }
            if (server.config.errorRate > 0) {
                console.log(`      ‚ö†Ô∏è Taxa de erro: ${(server.config.errorRate * 100).toFixed(1)}%`);
            }
        });
        
        if (this.gateway) {
            this.gateway.getDetailedReport();
        }
        
        console.log('==========================================\n');
        
        return status;
    }

    /**
     * Simular falha de servidor
     */
    async simulateServerFailure(serverId, duration = 30000) {
        const server = this.servers.get(serverId);
        if (!server || !server.started) {
            throw new Error(`Servidor ${serverId} n√£o est√° rodando`);
        }
        
        console.log(`üí• Simulando falha do servidor ${serverId} por ${duration}ms`);
        
        await server.stop();
        
        // Remover do gateway temporariamente
        if (this.gateway) {
            this.gateway.removeBackendServer(serverId);
        }
        
        // Restaurar servidor ap√≥s dura√ß√£o especificada
        setTimeout(async () => {
            try {
                await server.start();
                
                // Adicionar de volta ao gateway
                if (this.gateway) {
                    this.gateway.addBackendServer('localhost', server.port, {
                        weight: server.config.weight,
                        metadata: { serverId }
                    });
                }
                
                console.log(`üîÑ Servidor ${serverId} restaurado ap√≥s simula√ß√£o de falha`);
            } catch (error) {
                console.error(`‚ùå Erro ao restaurar servidor ${serverId}: ${error.message}`);
            }
        }, duration);
    }

    /**
     * Destruir cluster
     */
    async destroy() {
        console.log('üßπ Destruindo cluster...');
        
        await this.stopGateway();
        await this.stopAll();
        this.servers.clear();
        
        console.log('‚úÖ Cluster destru√≠do');
    }
}

module.exports = {
    BackendServerInstance,
    BackendCluster
};
